--- a/index.html
+++ b/index.html
@@ -14,27 +14,203 @@
           <a href="#" class="header__logo">
             <span class="header__logo-item">Steam</span>Accounts
           </a>
-          <ul class="header__menu">
-            <li class="header__menu-item">
-              <a href="#" class="header__menu-link">Accounts</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="#" class="header__menu-link">Legal & FAQ's</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="#" class="header__menu-link">VOUCH</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="#" class="header__menu-link">Join Discord</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="#" class="header__menu-link">Countact Us</a>
-            </li>
-          </ul>
+          <nav class="header__nav">
+            <ul class="header__menu">
+              <li class="header__menu-item">
+                <a href="#" class="header__menu-link">Accounts</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="#" class="header__menu-link">Legal & FAQ's</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="#" class="header__menu-link">VOUCH</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="#" class="header__menu-link">Join Discord</a>
+              </li>
+              <li class="header__menu-item">
+                <a href="#" class="header__menu-link">Countact Us</a>
+              </li>
+            </ul>
+          </nav>
           <a href="#" class="header__shop-btn">Shop</a>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="filter container">
+          <div class="filter__top"></div>
+          <div class="filter__box">
+            <aside class="filter__aside">
+              <div class="filter__aside-btns">
+                <button
+                  class="filter__sort-btn"
+                  data-filter="all"
+                  type="button"
+                >
+                  All
+                </button>
+                <button
+                  class="filter__sort-btn"
+                  data-filter=".category-a"
+                  type="button"
+                >
+                  Azumi
+                </button>
+                <button
+                  class="filter__sort-btn"
+                  data-filter=".category-b"
+                  type="button"
+                >
+                  Mey
+                </button>
+                <button
+                  class="filter__sort-btn"
+                  data-filter=".category-c"
+                  type="button"
+                >
+                  Miho
+                </button>
+                <button
+                  class="filter__sort-btn"
+                  data-filter=".category-d"
+                  type="button"
+                >
+                  Akiko
+                </button>
+                <button
+                  class="filter__sort-btn"
+                  data-filter=".category-e"
+                  type="button"
+                >
+                  Naomi
+                </button>
+              </div>
+            </aside>
+            <div class="filter__content">
+              <article class="product-item mix category-a">
+                <img
+                  src="images/product-image.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Azumi</h2>
+                <span class="product-item__price">15$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-b">
+                <img
+                  src="images/product-image4.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Mey</h2>
+                <span class="product-item__price">10$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-c">
+                <img
+                  src="images/product-image2.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Miho</h2>
+                <span class="product-item__price">25$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-d">
+                <img
+                  src="images/product-image3.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Akiko</h2>
+                <span class="product-item__price">20$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-b">
+                <img
+                  src="images/product-image4.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Mey</h2>
+                <span class="product-item__price">10$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-e">
+                <img
+                  src="images/product-image5.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Naomi</h2>
+                <span class="product-item__price">30$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-a">
+                <img
+                  src="images/product-image.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Azumi</h2>
+                <span class="product-item__price">15$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-d">
+                <img
+                  src="images/product-image3.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Akiko</h2>
+                <span class="product-item__price">20$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-c">
+                <img
+                  src="images/product-image2.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Miho</h2>
+                <span class="product-item__price">25$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-d">
+                <img
+                  src="images/product-image3.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Akiko</h2>
+                <span class="product-item__price">20$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-b">
+                <img
+                  src="images/product-image4.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Mey</h2>
+                <span class="product-item__price">10$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+              <article class="product-item mix category-e">
+                <img
+                  src="images/product-image5.png"
+                  alt="product image"
+                  class="product-item__img"
+                />
+                <h2 class="product-item__title">Naomi</h2>
+                <span class="product-item__price">30$</span>
+                <button class="product-item__btn">buy now</button>
+              </article>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
     <script src="js/main.min.js"></script>
