--- a/index.html
+++ b/index.html
@@ -38,7 +38,22 @@
       </header>
       <main class="main">
         <section class="filter container">
-          <div class="filter__top"></div>
+          <div class="filter__top">
+            <input class="filter__top-input" type="text" id="search" placeholder="Search to buy..." autocomplete="off"/>
+            <span class="filter__top-input-icon">
+              <svg
+                fill="#e5e5e5"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 30 30"
+                width="30px"
+                height="30px"
+              >
+                <path
+                  d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"
+                />
+              </svg>
+            </span>
+          </div>
           <div class="filter__box">
             <aside class="filter__aside">
               <div class="filter__aside-btns">
@@ -93,7 +108,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Azumi</h2>
+                <h2 class="product-item__title search">Azumi</h2>
                 <span class="product-item__price">15$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -103,7 +118,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Mey</h2>
+                <h2 class="product-item__title search">Mey</h2>
                 <span class="product-item__price">10$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -113,7 +128,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Miho</h2>
+                <h2 class="product-item__title search">Miho</h2>
                 <span class="product-item__price">25$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -123,7 +138,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Akiko</h2>
+                <h2 class="product-item__title search">Akiko</h2>
                 <span class="product-item__price">20$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -133,7 +148,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Mey</h2>
+                <h2 class="product-item__title search">Mey</h2>
                 <span class="product-item__price">10$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -143,7 +158,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Naomi</h2>
+                <h2 class="product-item__title search">Naomi</h2>
                 <span class="product-item__price">30$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -153,7 +168,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Azumi</h2>
+                <h2 class="product-item__title search">Azumi</h2>
                 <span class="product-item__price">15$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -163,7 +178,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Akiko</h2>
+                <h2 class="product-item__title search">Akiko</h2>
                 <span class="product-item__price">20$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -173,7 +188,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Miho</h2>
+                <h2 class="product-item__title search">Miho</h2>
                 <span class="product-item__price">25$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -183,7 +198,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Akiko</h2>
+                <h2 class="product-item__title search">Akiko</h2>
                 <span class="product-item__price">20$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -193,7 +208,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Mey</h2>
+                <h2 class="product-item__title search">Mey</h2>
                 <span class="product-item__price">10$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
@@ -203,7 +218,7 @@
                   alt="product image"
                   class="product-item__img"
                 />
-                <h2 class="product-item__title">Naomi</h2>
+                <h2 class="product-item__title search">Naomi</h2>
                 <span class="product-item__price">30$</span>
                 <button class="product-item__btn">buy now</button>
               </article>
